refactor: improve Redis cache configuration and clean up codebase